# ig-scraper

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  INSTAGRAPI_AUDIT_GUIDANCE.md  README.md  pyproject.toml  requirements.txt  tasks.py
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: README.md  _TEMPLATE.md
docs/: workarounds.md
resources/: instagram_handles.md
scripts/: check_all.py  check_file_length.py
src/data/accounts/@testuser/posts/001_1/: comments.json  metadata.json
src/data/accounts/@user/posts/001_99/: caption.txt  metadata.json
src/ig_scraper/: AGENTS.md  __init__.py  __main__.py  analysis.py  analysis_io.py  analysis_render.py  builders.py  cli.py  client.py  comments.py  config.py  errors.py  exceptions.py  export.py  highlight_collection.py  ig_comments.py  ig_config.py  ig_exceptions.py  ig_media.py  ig_media_processing.py  ig_retry.py  instagram_client.py  instagrapi_fallback.py  logging_utils.py  media.py  media_processing.py  models.py  patch.py  paths.py  readme_manager.py  relationship_collection.py  relationship_io.py  relationship_result.py  retry.py  run_scrape.py  saved_collection.py  saved_collection_models.py  scraper.py  session.py  story_collection.py  (+1 more)
src/ig_scraper/models/: AGENTS.md  __init__.py  comment.py  post.py  profile.py
src/scraper/: analysis.py  instagram_client.py  instagrapi_fallback.py  logging_utils.py  run_scrape.py
tests/: AGENTS.md  __init__.py  conftest.py  factories.py  test_analysis.py  test_analysis_render.py  test_bdd.py  test_builders.py  test_cli.py  test_client.py  test_comments.py  test_config.py  test_exceptions.py  test_export.py  test_file_length.py  test_highlight_collection.py  test_instagram_client.py  test_instagrapi_fallback.py  test_logging_utils.py  test_models.py  test_obtain_metadata.py  test_patch.py  test_property.py  test_regressions.py  test_relationship_collection.py  test_run_scrape.py  test_saved_collection.py  test_scraper.py  test_session.py  test_snapshots.py  test_story_collection.py  test_tagged_collection.py
tests/features/: analysis_pipeline.feature  handle_validation.feature
tests/test_regressions/: test_analysis_markdown_regression.md  test_comment_grouping_regression.yml  test_post_dict_regression.yml  test_profile_dict_regression.yml  test_top_words_regression.yml
