[project]
name = "ig-scraper"
version = "0.1.0"
description = "Instagram scraping tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instagrapi~=2.3",
    "python-dotenv>=1.2.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "mypy>=1.15",
    "ruff>=0.15.9",
    "pip-audit>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "T20", # flake8-print
    "S",   # flake8-bandit (security)
    "D",   # pydocstyle
    "A",    # flake8-builtins
    "TCH",  # flake8-type-checking
    "PIE",  # flake8-pie
    "PERF", # perflint
    "LOG",  # flake8-logging
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ARG",     # unused arguments common in fixtures
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
disallow_incomplete_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "instagrapi.*"
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that hit real APIs",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:instagrapi.*",
]

[tool.coverage.run]
source = ["src/ig_scraper"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__"',
    "@overload",
]

[tool.uv]
package = false

[tool.uv.pip]
generate-hashes = true
